# poa_alignment

./: CMakeLists.txt  LICENSE.md
spike/: CMakeLists.txt  smith_waterman.cpp
src/: CMakeLists.txt  poa_alignment.cpp  poa_alignment.hpp  sequence.cpp  sequence.hpp  tournament_poa_build.cpp  tournament_poa_build.hpp
tests/: CMakeLists.txt  align_sequence_to_graph.cpp  poa_alignment.cpp  smith_waterman_test.cpp  topological_test.cpp  tournament_poa_build.cpp  tournament_poa_build_dist.cpp  tournament_poa_build_small.cpp
tests/data/: sequences  sequences_large  small
tests/data/matrix/: blosum50LL.mat
tests/data/query/: test2.fasta
tests/data/results/: P18080_sprot12071_blosum50LL_r1q3  P18080_sprot12071_blosum50_r1q3  P19930_sprot196_blosum50_r1q3  test2_sprot12071_blosum50_r1q3
